--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "querystring": "^0.2.0",
+    "raf": "^3.4.1",
     "react": "^16.9.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^20.3.0",
@@ -15,9 +19,11 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.1.1",
+    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "toastr": "^2.1.4"
+    "toastr": "^2.1.4",
+    "yarn": "^1.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
