--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "3.1.1",
     "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "toastr": "^2.1.4",
     "yarn": "^1.17.3"
